# GoIT_Tasks-WEB-

./: Task_11.session.sql  trt.txt
Task_1/: GoIT_Diagram.drawio  link
Task_10/Migrate_data/: quotes.json  test.py
Task_11/: main.py
Task_11-14/: .coverage  docker-compose.yml  main.py  pyproject.toml  test.db
Task_11-14/docs/: conf.py  index.rst
Task_11-14/docs/_build/doctrees/: environment.pickle  index.doctree
Task_11-14/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
Task_11-14/migration/: env.py
Task_11-14/migration/versions/: 2fd4a8253459_initial_migration.py
Task_11-14/src/conf/: config.py  messages.py
Task_11-14/src/database/: db.py
Task_11-14/src/entity/: models.py
Task_11-14/src/repository/: contacts.py  users.py
Task_11-14/src/routes/: auth.py  contacts.py  users.py
Task_11-14/src/schemas/: contact.py  user.py
Task_11-14/src/services/: auth.py  email.py
Task_11-14/src/tests/: conftest.py  error.txt  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
Task_11.12/: .env.example  docker-compose.yml  main.py
Task_11.12/migration/: env.py
Task_2/point_1_pipfile/: Pipfile
Task_3/point_2/: factorize.py
Task_4/: app.py
Task_5/: exchange.py  main.py
Task_6/: aditional_quert_11.py  aditional_quert_12.py  query_1.py  query_10.py  query_2.py  query_3.py  query_4.py  query_5.py  query_6.py  query_7.py  query_8.py  query_9.py  test.sqlite
Task_7/: main.py  queries.py  seed.py
Task_9/: README
(+82 files in other folders)
