[tool.poetry]
name = "task-14"
version = "0.1.0"
description = ""
authors = ["Oleksii Neshcheret <85193924+Kunandiir@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
uvicorn = "^0.29.0"
python-jose = "^3.3.0"
pydantic = "^2.7.0"
python-multipart = "^0.0.9"
passlib = "^1.7.4"
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.1"
redis = "^5.0.3"
fastapi-limiter = "^0.1.6"
jinja2 = "^3.1.3"
cloudinary = "^1.40.0"
pytest = "^8.1.1"
bcrypt = "^4.1.2"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"


[tool.poetry.group.test.dependencies]
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["src/tests"]
filterwarnings = "ignore::DeprecationWarning"